fix: couleur du switch en dark mode

--- a/packages/toggle/src/styles/_module.scss
+++ b/packages/toggle/src/styles/_module.scss
@@ -132,7 +132,7 @@
       text-indent: -9999px;
       @include scheme-element-text-color(bf500);
       @include scheme-element-border-color(bf500);
-      @include scheme-element-bg-color(w-g750);
+      @include scheme-element-bg-color(w);
       @include z-index(over);
       @include ie-hack() {
         color: blue;
